fix: form (remove gap)

--- a/mainsite/static/mainsite/style.css
+++ b/mainsite/static/mainsite/style.css
@@ -357,7 +357,7 @@ input:focus:not(:nth-child(5)),textarea:focus{
 }
 
 form .article50:first-of-type{
-  gap:62px;
+  /* gap:62px; */
   padding-left: 0px;
 }
 textarea{
@@ -370,6 +370,9 @@ textarea{
 }
 .inputBox{
   position: relative;
+}
+.firstField{
+  margin-bottom: 62px;
 }
 .placeholder{
   position: absolute;
@@ -979,6 +982,9 @@ input[type='submit'].copy-bottom:focus:hover{
 
 @media (max-width: 767px)
 {
+  .firstField{
+    margin-bottom: 0px;
+  }
   main{
     margin-top: 0px;
   }
@@ -988,15 +994,12 @@ input[type='submit'].copy-bottom:focus:hover{
   .item {
     margin-top: 0px;
 }
-form{
-  gap:40px;
-}
   .article50{
     width: 100%;
     margin-top: 40px;
   }
-  form .article50:first-of-type{
-        gap:40px;
+  form .inputArea{
+        margin-bottom: 40px;
   }
   .get-connected .article50{
     margin-top: 0px;
@@ -1124,6 +1127,9 @@ header  a {
 
 @media (max-width:550px)
 {
+  .foto {
+    height: 90%;
+  }
   .link-blocks{
     width: 100%;
   }
